Details
-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
4.7.0
-
None
-
47862497693ffac597557f940535909df549d897
Description
Setting the Flickable's overShoot to false should prevent it from doing a bouncy
over-shoot on a flick, but should not stop the user from dragging it beyond the
end with a springy feel to it.
Perhaps the configurability needs to be extended beyond simple on and off?